Fork Statement works